--- a/static/a.html
+++ b/static/a.html
@@ -1,18 +1,22 @@
 <html>
 <head>
+<meta charset='utf-8'>
 
-	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
 
-	<link href="/static/css/scojs.css" rel="stylesheet">
-	<link href="/static/css/sco.message.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="http://www.bootcss.com/p/sco.js/assets/css/prettify.css" rel="stylesheet">
+	<link href="http://www.bootcss.com/p/sco.js/assets/css/mosto.css" rel="stylesheet">
+	<link href="http://www.bootcss.com/p/sco.js/assets/css/scojs.css" rel="stylesheet">
+	<link href="http://www.bootcss.com/p/sco.js/assets/css/styles.css" rel="stylesheet">
 
 	<script src="http://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
-	<script src="/static/js/bootstrap.js"></script>
-	<script src="/static/js/sco.modal.js"></script>
+	<script src="http://cdn.bootcss.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+	<script src="http://www.bootcss.com/p/sco.js/assets/js/sco.modal.js"></script>
 </head>
 <body>
 	<button type="button" class="btn btn-lg btn-default">Default</button>
-	<a data-trigger="modal" href="a.html" data-title="Modal title" class="btn">Launch demo modal</a>
+	<a data-trigger="modal" href="lipsum.html" data-title="Modal title" class="btn btn-primary btn-large">Launch demo modal</a>
+
 </body>
 </html>
